expose dynamic questions and groups
