# api/swagger.yaml
@@ -11,6 +11,31 @@ tags:
   - name: "login"
   - name: "user"
 paths:
+  /tshirts:
+    get:
+      tags:
+        - "tshirts"
+      summary: "Get TShirts"
+      operationId: "tshirtGET"
+      responses:
+        200:
+          description: "OK"
+          schema:
+            $ref: "#/definitions/Tshirt"
+      x-swagger-router-controller: "Tshirts"
+  /questions:
+    get:
+      tags:
+        - "questions"
+      summary: "Get Questions"
+      operationId: "questionGET"
+      responses:
+        200:
+          description: "OK"
+          schema:
+            $ref: "#/definitions/Question"
+      x-swagger-router-controller: "Question"
+
   /settings:
     get:
       tags:
@@ -519,3 +544,30 @@ definitions:
         format: "date"
       enviroment:
         type: "string"
+  Tshirt:
+    type: "array"
+    items:
+      properties:
+        id:
+          type: "string"
+        name:
+          type: "string"
+  Question:
+    type: "object"
+    properties:
+      required:
+        type: "array"
+        items:
+          properties:
+            id:
+              type: "string"
+            name:
+              type: "string"
+      optional:
+        type: "array"
+        items:
+          properties:
+            id:
+              type: "string"
+            name:
+              type: "string"
